syntax = "proto3";

option csharp_namespace = "OrderService";

service OrderServicee {
	rpc CreateOrder(CreateOrderrRequest) returns (OrderResponse);
	rpc GetOrder(OrderRequest) returns (OrderResponse);
}

message CreateOrderrRequest{
	int32 product_id = 1;
	int32 quantity = 2;
}

message OrderRequest{
	int32 id = 1;
}

message OrderResponse{
	int32 id = 1;
	int32 product_id = 2;
	int32 quantity = 3;
	double total_price = 4;
}